# tidb-fivetran-connector

./: .dockerignore  .gitignore  Dockerfile.deployer  README.md  app.py  config.py  connector.py  errors.py  observability.py  pyproject.toml  state.py  type_mapping.py
deployer/: runner.py
examples/: local_configuration.json
examples/local_workspace/increment/: metadata
examples/local_workspace/increment/test/worker/120/2026-05-25/: CDC000001.csv
examples/local_workspace/increment/test/worker/120/2026-05-25/meta/: CDC.index
examples/local_workspace/increment/test/worker/meta/: schema_120_201152832.json
examples/local_workspace/snapshot/: metadata  test.worker-schema.sql
fivetran/: __init__.py  operations.py  schema.py
increment/: __init__.py  csv.py  paths.py  reader.py  schema.py
k8s/: deployer-job.example.yaml
metadata/: __init__.py  catalog.py
scripts/: build_deployer_image.sh
snapshot/: __init__.py  reader.py
storage/: __init__.py  object_store.py  resolver.py
tests/: conftest.py  test_app_update.py  test_catalog_and_schema.py  test_config.py  test_deployer_runner.py  test_increment_paths.py  test_incremental_reader.py  test_snapshot_reader.py  test_state.py
